--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="start_label">Start</string>
     <string name="stop_label">Stop</string>
     <string name="distance_value">%d meters</string>
+    <string name="distance_per_time_value">%d m/s</string>
 </resources>
